# pkg/router/router.go
@@ -3,6 +3,7 @@ package router
 import (
 	"github.com/anggara-26/pomodoro-backend.git/app/handler"
 	_ "github.com/anggara-26/pomodoro-backend.git/docs/v1"
+	"github.com/anggara-26/pomodoro-backend.git/pkg/middleware"
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/middleware/cors"
 	"github.com/gofiber/fiber/v2/middleware/logger"
@@ -13,7 +14,12 @@ import (
 func CreateRouter(r *fiber.App) {
 	r.Use(logger.New())
 	r.Use(recover.New())
-	r.Use(cors.New())
+	r.Use(cors.New(cors.Config{
+		AllowOrigins: "*",
+		AllowMethods: "GET,POST,HEAD,PUT,DELETE,PATCH,OPTIONS",
+		AllowHeaders: "Origin,Content-Type,Accept,Authorization",
+	}))
+	r.Use(middleware.RateLimitMiddleware())
 
 	r.Get("/swagger/*", swagger.HandlerDefault)
 
@@ -37,9 +43,11 @@ func CreateRouter(r *fiber.App) {
 	sessions := v1.Group("/sessions")
 	sessions.Post("/start", handler.StartPomodoroSession)
 	sessions.Post("/end/:id", handler.EndPomodoroSession)
+	sessions.Get("/active", handler.GetActiveSessions)
+	sessions.Get("/history", handler.GetSessionHistory)
 
-	// stats := v1.Group("/stats", middleware.AuthMiddleware)
-	// stats.Get("/daily", getDailyStats)
-	// stats.Get("/weekly", getWeeklyStats)
-	// stats.Get("/monthly", getMonthlyStats)
+	stats := v1.Group("/stats")
+	stats.Get("/daily", handler.GetDailyStats)
+	stats.Get("/weekly", handler.GetWeeklyStats)
+	stats.Get("/monthly", handler.GetMonthlyStats)
 }
